--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 baseurl: /road_to_heaven
 
-title: "Vatsal Mistry"
-author: "Vatsal Mistry"
+title: "UDIT SRIVASTAVA"
+author: "UDIT SRIVASTAVA"
 bio-oneliner: "A Pythonista"
 
 social-site:
