--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: "UDIT SRIVASTAVA"
 bio-oneliner: "A Pythonista"
 
 social-site:
-    facebook: ""
+    facebook: "www.facebook.com/uditsrivastava"
     instagram: ""
     twitter: ""
     github: ""
