--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 baseurl: /road_to_heaven
 
-title: "UDIT SRIVASTAVA"
-author: "UDIT SRIVASTAVA"
+title: "RAVITESH SRIVASTAVA"
+author: "RAVITESH SRIVASTAVA"
 bio-oneliner: "A Pythonista"
 
 social-site:
-    facebook: "www.facebook.com/uditsrivastava"
+    facebook: "www.facebook.com/raviteshsrivastava"
     instagram: ""
     twitter: ""
     github: ""
